# wresult

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linux.yml  python-package.yml  win32.yml
src/: wresult.py
tests/: test_parser.py
tests/data/: client.keys  ossec.conf
tests/data/win32/: agent.conf  local_internal_options.conf  ossec.conf
wresult/: wresult.py
