[build-system]
requires = [
    "setuptools>=77.0.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "wresult"
version = "1.0.1"
description = "Parse the Wazuh agent running configuration, print to stdout as JSON or save to an HTML file."
readme = "README.md"
requires-python = ">=3.9"

license = "MIT"
license-files = ["LICEN[CS]E*"]

authors = [{ name = "Zafer Balkan", email = "zafer@zaferbalkan.com" }]
keywords = ["wazuh", "detection", "security", "monitoring", "logging", "siem", "reporting"]
classifiers = [
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "xmltodict >= 1.0.2",
]

[project.urls]
Homepage = "https://github.com/zbalkan/wresult"
Repository = "https://github.com/zbalkan/wresult"
Issues = "https://github.com/zbalkan/wresult/issues"

[project.scripts]
wresult = "wresult:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["wresult"]

[tool.setuptools.packages.find]
where = ["src"]